make url pathing more RESTful

--- a/Views/add_cd_form.cshtml
+++ b/Views/add_cd_form.cshtml
@@ -1,6 +1,6 @@
 <h2>Add new CD</h2>
 
-<form action="/add_cd" method="post">
+<form action="/cd/cds" method="post">
   <label for="title">CD Title</label>
   <input id="title" type="text" name="title">
 </form>
