--- a/Views/artist_entry_form.cshtml
+++ b/Views/artist_entry_form.cshtml
@@ -1,7 +1,7 @@
 <h2>Adding Artist to @Model["rack"].GetTitle()</h2>
 
 
-<form action="/add_artist_name" method="post">
+<form action='/cd/@Model["rack"].GetId()/artists' method="post">
   <input id='rack-id' name='rack-id' type='hidden' value='@Model["rack"].GetId()'>
   <label for="artist_name">Artist Name</label>
   <input id="artist_name" type="text" name="artist_name">
