--- a/Views/cd_info.cshtml
+++ b/Views/cd_info.cshtml
@@ -6,6 +6,6 @@
   }
 </ul>
 
-<p><a href='/cd/@Model["rack"].GetId()/add_artist_form'>Add an artist to this CD</a></p>
-<p><a href="/add_cd">Add another CD</a></p>
-<p><a href="/cd">View all CD's</a></p>
+<p><a href='/cd/@Model["rack"].GetId()/artist/add'>Add an artist to this CD</a></p>
+<p><a href="/cd/add">Add another CD</a></p>
+<p><a href="/">View all CD's</a></p>
