fine tune RESTful practice, play with styling via _Layout.

--- a/Views/artist_entry_form.cshtml
+++ b/Views/artist_entry_form.cshtml
@@ -1,3 +1,7 @@
+@{
+  Layout="Shared/_Layout.cshtml";
+}
+<div class = "container">
 <h2>Adding Artist to @Model["rack"].GetTitle()</h2>
 
 
@@ -6,3 +10,4 @@
   <label for="artist_name">Artist Name</label>
   <input id="artist_name" type="text" name="artist_name">
 </form>
+</div>
