--- a/Views/add_cd_form.cshtml
+++ b/Views/add_cd_form.cshtml
@@ -1,6 +1,12 @@
+@{
+  Layout="Shared/_Layout.cshtml";
+}
+<div class="container">
+
 <h2>Add new CD</h2>
 
 <form action="/cd/cds" method="post">
   <label for="title">CD Title</label>
   <input id="title" type="text" name="title">
 </form>
+</div>
