--- a/Views/view_cd_titles.cshtml
+++ b/Views/view_cd_titles.cshtml
@@ -1,3 +1,8 @@
+@{
+  Layout="Shared/_Layout.cshtml";
+}
+<div class="container">
+
 <h2>Your CD's</h2>
 <h5>Click on the name to add an artist</h5>
 <ul>
@@ -10,3 +15,4 @@
 </ul>
 
 <p><a href="/cd/add">Add a new cd</a></p>
+</div>
