--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-      <link rel="stylesheet" href="/Content/css/bootstrap.css">
-    <link rel="stylesheet" href="/Content/css/styles.css">
+      <link rel="stylesheet" href="/content/css/bootstrap.css">
+    <link rel="stylesheet" href="/content/css/styles.css">
   </head>
   <body>
-    @RenderBody()
+    <div class="container">
+      @RenderBody()
+    </div>
   </body>
 </html>
