--- a/Views/add_cd_form.cshtml
+++ b/Views/add_cd_form.cshtml
@@ -1,12 +1,11 @@
 @{
   Layout="Shared/_Layout.cshtml";
 }
-<div class="container">
+
 
 <h2>Add new CD</h2>
 
-<form action="/cd/cds" method="post">
+<form class="form-control" action="/cd/cds" method="post">
   <label for="title">CD Title</label>
   <input id="title" type="text" name="title">
 </form>
-</div>
