--- a/Views/artist_entry_form.cshtml
+++ b/Views/artist_entry_form.cshtml
@@ -1,13 +1,12 @@
 @{
   Layout="Shared/_Layout.cshtml";
 }
-<div class = "container">
+
 <h2>Adding Artist to @Model["rack"].GetTitle()</h2>
 
 
-<form action='/cd/@Model["rack"].GetId()/artists' method="post">
+<form class="form-control" action='/cd/@Model["rack"].GetId()/artists' method="post">
   <input id='rack-id' name='rack-id' type='hidden' value='@Model["rack"].GetId()'>
   <label for="artist_name">Artist Name</label>
   <input id="artist_name" type="text" name="artist_name">
 </form>
-</div>
